# university

./: .gitignore  .gitmodules  README.md
assets/: Makefile  colored_code.tex  header.tex  header_xe.tex  hyperref.tex  title.tex
autocontrol/lab2/report/: first.zcos  report.md  scheme1.zcos  scheme2.zcos  scheme3.zcos  w
autocontrol/lab3/report/: report.md
automata/lab1/report/: Makefile  report.tex
automata/lab1/src/: moore.gv
automata/lab2/report/: Makefile  report.tex
automata/lab3/img/: test.jff  test2.jff
automata/lab3/report/: report.tex
circuitry/lab1/ise/: lab.xise
circuitry/lab1/report/: report.tex
circuitry/lab1/src/: controller.v  nexys.ucf  pwm.v  test.v
circuitry/lab2/: lab2.xise
circuitry/lab2/ise/: lab.xise
circuitry/lab2/iseconfig/: lab2.projectmgr  reader.xreport
circuitry/lab2/report/: report.tex
circuitry/lab2/src/: lab2.v  nexys.ucf  read.v  read.xml  reader.v  test.v  write_led.v  write_led.xml
circuitry/lab3/: .gitignore  Makefile  convert.py  shift_engine.vhd  wb_spimaster.vhd
circuitry/lab3/ise/: lab.xise
circuitry/lab3/report/: report.tex
circuitry/lab4/: Makefile  diff
circuitry/lab4/ise/: lab.xise
circuitry/lab4/report/: report.tex
constr/lab1/report/: calc.ods  header.def  report.md
constr/lab2/report/: adj_matrix.txt  complex_matrix.txt  con_matrix.txt  gen-graph.py  input_circuit_module.txt  matrix  oldtable  readme.txt  report.md  trans.awk  trmatrix  var
constr/lab3/report/: atr  matrix  report.md  totr  trmatrix
constr/lab4/report/: header.def  report.md
crypto/lab1/report/: prob  report.md  table  var
crypto/lab2/report/: out  out.txt  report.md
crypto/lab3/report/: calc.py  lab3_12.txt  report.md
crypto/lab4/report/: lab4_1_12.txt  lab4_2_12.txt  report.md
crypto/lab5/report/: lab5_1_12.txt  lab5_2_12.txt  lab5_3_12.txt  report.md
datamining/data/txt/: celtic.txt  chinese.txt  egypt.txt  greek.txt  japanese.txt  jewish.txt  norse.txt  north_indians.txt
datamining/src/: freq.py  hal.py  tfidf.py  utils.py
dbms/courseWorkPart2/: pom.xml
dbms/coursework/report/: report.tex
dbms/lab1/report/: report.md
dbms/lab1/src/: lab1.sql
dbms/lab2/report/: report.md
dbms/lab2/src/: backup.sh  backup.sql  create-db.sh  create-db.sql  create_db.sh  create_db.sql  env  inits191954.ora  lab.sql  people.sql  people_min.sql  products_min.sql  recover.sh  restore.sql  sched.sql
dbms/lab3/report/: report.md
dbms/lab3/src/: backup.sh  create_replica.sh  do_replica.sh  dump_log.sql  env  inits191954.ora  inits191954_rep.ora  recover.sh  setup_log.sql
dbms/lab4/report/: report.md
dbms/lab4/src/: asm_env  backup.sh  create_db.sql  create_disk_groups.sh  create_spfile.sh  do_replica.sh  dump_log.sql  init+ASM.191954.ora  orapwdorcl  s2_add_disk.sh  s2_add_disk2.sh  s2_add_shark.sh  s2_add_zebra.sh  s2_drop_add.sh  s2_drop_zebra.sh  s2_recreate_group.sh  setup_disk_groups.sql  setup_spfile.sql  shutdown.sh
dbms/lab5/report/: report.md
dbms/lab5/src/: close_sessions.sh  create_table.sh  create_user.sh  list_sessions.sh  ocrconfig
dbms/spring_coursework/report/: report.tex
dbs/courseWorkPart2/: .gitignore
dbs/coursework/src/: dump.sql
dbs/lab2/src/: person_schedule_info.sql  person_schedule_info_min.sql  products.sql
dbs/spring_coursework/report/: Makefile
decision/lab1/report/: report.md
decision/lab2/report/: report.md
decision/lab3/report/: header.def  report.md
distributed/: Makefile
distributed/lab1/src/: Makefile  io.h  ipc.c  labdefs.h  main.c  util.c  util.h
distributed/lab2/src/: common.h  io.h  ipc.c  msg.c  pa23.c  util.c
distributed/lab3/: Makefile.config
distributed/lab3/src/: ipc.c  labdefs.h  pa23.c  util.c  util.h
distributed/lab4/: Makefile.config  out
distributed/lab4/src/: queue.c  queue.h
distributed/lab5/: Makefile.config
distributed/lab5/src/: cs.c  ipc.c  ipc.h  util.c
distributed_mag/: prepare.sh
distributed_mag/lab1/part1/: CMakeLists.txt
distributed_mag/lab1/part1/include/: util.h
distributed_mag/lab1/part1/src/: ipc.c  main.c  util.c
distributed_mag/lab1/part2/: CMakeLists.txt
distributed_mag/lab1/part2/src/: msg.c  pa23.c  util.c
distributed_mag/lab1/part3/: CMakeLists.txt
distributed_mag/lab2/: CMakeLists.txt
distributed_mag/lab2/include/: forks.h  io.h  util.h
distributed_mag/lab2/src/: cs.c  forks.c  ipc.c  msg.c  pa4.c  util.c
distributed_mag/lab3/: CMakeLists.txt
distributed_mag/lab3/include/: labdefs.h  util.h
distributed_mag/lab3/src/: bank_robbery.c  ipc.c  msg.c  pavt.c  util.c
english/lab1/report/: report.md
english/lab2/report/: report.md
english/lab3/report/: report.md
english/lab4/report/: report.md
img/essay/report/: header.def  (+1 more)
info_man_systems/lab3/: .clang-format  Makefile
info_man_systems/lab4/: Makefile
io/lab1/: CMakeLists.txt
io/lab1/src/: BusMatrix.cpp  BusMatrix.h  InputCapture.cpp  InputCapture.h  Signal.cpp  Signal.h  Timer.cpp  Timer.h  main.cpp  mips32.cpp  mips32.h
io/lab1/src/input_capture/: EdgeDetector.cpp  EdgeDetector.h  FIFO.cpp  FIFO.h  ICCONF.cpp  ICCONF.h  Prescaler.cpp  Prescaler.h  TimersControl.cpp  TimersControl.h
io/lab3/: constraints.xdc
mpi/: .gitignore  README.md  pom.xml
mpi/tests/: init-env  stress.jmx  tests.py
orgcomp/: new.asm
parallel/lab1/src/: CMakeLists.txt  calc.sh  combine.sh  main.c  plot.py
parallel/lab2/src/: CMakeLists.txt  main.c  plot_k.py
parallel/lab2/src/framewave/: README  fwBase.h  fwImage.h  fwJPEG.h  fwSignal.h  fwVideo.h
parallel/lab2/src/framewave/lib/: libfwBase.so.1.3.0
parallel/lab3/src/: CMakeLists.txt  calc.sh  combine.sh  disable_ht.sh  main.c
psycho/report/: Makefile  report.md
sdb/: academic_group.sql.sh  gen-dorms.py  grade.sql.sh
sdb/pump/: mysql-pump.py  mysql_pump.py  oracle_pump.py
sfw_test/lab1/: pom.xml
sfw_test/lab2/: .gitignore  pom.xml
sfw_test/lab3/: pom.xml
sfw_test/lab4/: lab.jmx  lab_stress.jmx
sig_proc/coursework/: Cargo.toml  Makefile  report.md  stdev.gnu
sig_proc/lab1/: plot
softeng/: diagram_1.bpmn
survival/lab8/: calc.ods
webservices/lab7/: pom.xml
(+504 files in other folders)
